--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -2,8 +2,12 @@
   <title>To-Do lists</title>
   <body>
     <h1>You To-Do list</h1>
+    <form method="POST" action="/lists/{{ list.id }}/add_item">
+      <input id='id_new_item' placeholder='Enter a to-do item' name="item_text"/>
+      {% csrf_token %}
+    </form>
     <table id='id_list_table'>
-      {% for item in items %}
+      {% for item in list.item_set.all %}
       <tr>
 	<td>
 	  {{ forloop.counter }}: {{ item.text  }}
