--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,12 +1,9 @@
-<html>
-  <title>To-Do lists</title>
-  <body>
-    <h1>You To-Do list</h1>
-    <form method="POST" action="/lists/{{ list.id }}/add_item">
-      <input id='id_new_item' placeholder='Enter a to-do item' name="item_text"/>
-      {% csrf_token %}
-    </form>
-    <table id='id_list_table'>
+{% extends 'base.html' %}
+{% block header_text %}Your To-Do list{% endblock %}
+{% block form_action %}/lists/{{list.id}}/add_item{% endblock %}
+
+{% block table %}
+<table id='id_list_table' class="table">
       {% for item in list.item_set.all %}
       <tr>
 	<td>
@@ -14,7 +11,6 @@
 	</td>
       </tr>
       {% endfor %}
-    </table>
+</table>
+{% endblock %}
     
-  </body>
-</html>
