--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -38,6 +38,13 @@
       </div>
 
     </div>
+    <script src='/static/jquery-3.5.1.min.js'></script>
+    <script src='/static/list.js'></script>
+    <script>
+      window.Superlists.initialize();
+    </script>
+    
+      
   </body>
 
 </html>
