--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -20,7 +20,9 @@
 	<form method="POST" action = "{% url 'send_login_email' %}" >
 	  Enter email to login: <input name="email" type="text"/>
 	  {% csrf_token %}
+	</form>
 	{% endif %}
+	</div>
       <div class="row">
         <div class="col-md-6 col-md-offset-3 jumbotron">
           <div class="text-center">
