--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -72,7 +72,7 @@
 
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
-          {% block extract_content %}
+          {% block extra_content %}
           {% endblock %}
         </div>
       </div>
